# Cliniface

./: .CMakeLists.txt.un~  .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt~  Cliniface.exe.local  README.md  bugs.md  changelog.md  changes.md  changes.txt  czech.txt  data.tgz  default_prefs.lua.in  examples.tgz  facemodels.tgz  fd_tool.tgz  features.md  icon.rc  knownbugs.md  makePatch.bat  makePatch.py  makeme.bat  makeme.py  manifest.xml  prefs.lua.in  resources.qrc  texmfs.tgz  todo.md  todo.txt  u3dIntel.tgz  u3dIntelWin.tgz
cmake/: ClinifacePluginsConfig.cmake
data/: hpo.txt  lmks.txt
data/hpos/: hp0000154.lua  hp0000160.lua  hp0000179.lua  hp0000215.lua  hp0000219.lua  hp0000275.lua  hp0000276.lua  hp0000283.lua  hp0000289.lua  hp0000311.lua  hp0000316.lua  hp0000319.lua  hp0000321.lua  hp0000322.lua  hp0000325.lua  hp0000337.lua  hp0000341.lua  hp0000343.lua  hp0000426.lua  hp0000431.lua  hp0000445.lua  hp0000446.lua  hp0000448.lua  hp0000460.lua  hp0000463.lua  hp0000490.lua  hp0000494.lua  hp0000506.lua  hp0000508.lua  hp0000520.lua  hp0000581.lua  hp0000582.lua  hp0000601.lua  hp0000637.lua  hp0002000.lua  hp0002002.lua  hp0003189.lua  hp0003196.lua  hp0005280.lua  hp0009765.lua  (+35 more)
data/hpos_new/: hpo_490.lua
data/metrics/: 10.txt  8.txt  m0006.lua  m0008.lua  m0010.lua  m0016.lua  m0018.lua  m0026.lua  m0028.lua  m0037.lua  m0038.lua  m0039.lua  m0040.lua  m0043.lua  m0044.lua  m0046.lua  m0047.lua  m0049.lua  m0059.lua  m0060.lua  m0081.lua  m0085.lua  m0086.lua  m0087.lua  m0089.lua  m0103.lua  m0105.lua  m10.lua  m1000.lua  m1001.lua  m1002.lua  m1003.lua  m1004.lua  m1005.lua  m1006.lua  m1007.lua  m1008.lua  m1009.lua  m1010.lua  m1011.lua  (+38 more)
data/reports/: report_asymmetry.lua  report_difference_magitude.lua  report_difference_perpendicular.lua  report_difference_tangential.lua  report_fasd.lua  report_fasd_original.lua  report_gen_phen_indications.lua  report_model.lua  report_test.lua  report_traits.lua  report_two_models.lua
data/stats/: g10.lua  g1000.lua  g1001.lua  g1002.lua  g1003.lua  g1004.lua  g1005.lua  g1006.lua  g1007.lua  g1008.lua  g103.lua  g105.lua  g16.lua  g18.lua  g2001.lua  g2002.lua  g2003.lua  g26.lua  g28.lua  g3001.lua  g3002.lua  g3003.lua  g3004.lua  g3005.lua  g3006.lua  g3007.lua  g3008.lua  g3009.lua  g3010.lua  g3011.lua  g3012.lua  g3013.lua  g3014.lua  g3015.lua  g3016.lua  g37.lua  g38.lua  g39.lua  g40.lua  g43.lua  (+13 more)
docs/: manual.docx
examples/: bella.3df  max.3df  petra.3df
examples/Bella/: 130408013434.3df  130408013434.mtl
examples/Max/: 130408020725.3df  130408020725.mtl
examples/bella_raw/: 130408013434.mtl
examples/max_raw/: 130408020725.mtl
forms/: AboutDialog.ui  ClinifaceMain.ui  HelpDialog.ui  ImageBrowser.ui  LicensesDialog.ui  PreferencesDialog.ui  ProgressDialog.ui  UpdatesDialog.ui
hpos_tbc/: hpo_520.lua
html/: analysis.html  cmdline.html  contact.html  database.html  faqs.html  fileformat.html  fileformats.html  functionality.html  geometry.html  hpoterms.html  index.html  interface.html  metrics.html  plugins.html  preferences.html  reports.html  research.html  trouble.html  tutorial.html  visualisations.html  walkthrough.html
html/functions_help/: callipers.html  camera.html  cmdline.html  detection.html  fileio.html  import_export.html  metadata.html  metrics.html  model_tools.html  procrustes.html  reports.html  visualisations.html
html/scripts/: includes.js  topButton.js
html/styles/: index.css  main.css
include/: .Cliniface_Config.h.in.un~  AboutDialog.h  AppUpdater.h  ClinifaceApp.h  ClinifaceMain.h  ClinifacePluginsLoader.h  Cliniface_Config.h.in  Cliniface_Config.h.in~  HelpDialog.h  ImageBrowser.h  LicensesDialog.h  Options.h  Preferences.h  PreferencesDialog.h  ProgressDialog.h  UpdatesDialog.h  VisualisationsOrganiser.h
install/: issues.txt
installer/: makedist.py
installer/config/: .config.xml.un~  config.xml  config.xml.in  config.xml~  control.qs
installer/linux/: cliniface.desktop
plugins/AsymmetryVis/: CMakeLists.txt  resources.qrc
plugins/AsymmetryVis/include/: AsymmetryVis.h
plugins/AsymmetryVis/res/icons/: icons8-reflection-Z-40.xcf
plugins/AsymmetryVis/src/: AsymmetryVis.cpp  AsymmetryVis.cpp_BAK
plugins/CurvatureVis/: CMakeLists.txt  cvis_icons.qrc  resources.qrc
plugins/DeltaVis/: CMakeLists.txt  resources.qrc
plugins/FASD/: CMakeLists.txt  resources.qrc
plugins/PolyNormalVis/: CMakeLists.txt  resources.qrc
plugins/SymmetryVis/: CMakeLists.txt  resources.qrc  sym_icons.qrc
plugins/SymmetryVis/include/: SymmetryVis.h
plugins/SymmetryVis/src/: SymmetryVis.cpp
plugins/VertexNormalVis/: CMakeLists.txt  resources.qrc
plugins/VertexNormalVis/include/: VertexNormalVis.h
plugins/VertexNormalVis/src/: VertexNormalVis.cpp
res/: ClinifaceAppT.xcf  pdf_logo.eps  splash.xcf
res/data/: about.html  about_OLD.html  ethn.txt  gene.txt  lmks.txt  support.md  support_OLD.md  synd.txt  toc.xml  update.md
res/html/: about.html
res/icons/: icons8-camera-triple-40.xcf
res/txt/: README.txt
scripts/: findNonConverted.py  tsb2do.txt  tsb2do_err1.txt  tsb2do_last.txt  tsb2obj.py
scripts/stef/: objlinks.py
src/: AboutDialog.cpp  AppUpdater.cpp  ClinifaceApp.cpp  ClinifaceMain.cpp  ClinifaceMain.cpp~  ClinifacePluginsLoader.cpp  HelpDialog.cpp  ImageBrowser.cpp  LicensesDialog.cpp  Options.cpp  Preferences.cpp  PreferencesDialog.cpp  ProgressDialog.cpp  UpdatesDialog.cpp  VisualisationsOrganiser.cpp  main.cpp
u3dIntelWin/samples/: FileRefTest_DISCARD.u3d  FileRefTest_PREPEND_ALL.xml  FileRefTest_REPLACE.u3d  TextureLayers.xml  VertexColor.xml  box.u3d  box.xml  box_2shaders.u3d  box_base.xml  box_ga.xml  box_group.xml  box_la.xml  box_mpview_anim.xml  box_part_base.u3d  box_part_base.xml  box_ta.u3d  box_ta.xml  box_ta_clodmod.u3d  box_ta_glyphmod.u3d  box_ta_glyphmod.xml  box_va.xml  file_ref.u3d  file_ref.xml  lineset.xml  lineset_anim.xml  lineset_grid.u3d  lineset_grid.xml  metadata.xml  mp_box.u3d  mp_box_light_direct.u3d  mp_plane64_anim.xml  plane100x100.u3d  plane100x100.xml  plane100x100_part_base.u3d  (+18 more)
(+1755 files in other folders)
